fix(structured-list): use spacing tokens update flush/condensed styles

--- a/packages/carbon-web-components/src/components/structured-list/structured-list.scss
+++ b/packages/carbon-web-components/src/components/structured-list/structured-list.scss
@@ -9,6 +9,7 @@ $css--plex: true !default;
 
 @use '@carbon/styles/scss/config' as *;
 @use '@carbon/styles/scss/colors' as *;
+@use '@carbon/styles/scss/spacing' as *;
 @use '@carbon/styles/scss/utilities' as *;
 @use '@carbon/styles/scss/theme' as *;
 @use '@carbon/styles/scss/components/structured-list/structured-list' as *;
@@ -27,13 +28,13 @@ $css--plex: true !default;
 }
 
 :host(#{$prefix}-structured-list-header-row) {
+  ::slotted(#{$prefix}-structured-list-header-cell:first-of-type) {
+    padding-left: $spacing-05;
+  }
+
   ::slotted(#{$prefix}-structured-list-header-cell),
   ::slotted(#{$prefix}-structured-list-header-cell-skeleton) {
     @extend .#{$prefix}--structured-list-th;
-  }
-
-  ::slotted(#{$prefix}-structured-list-header-cell) {
-    padding-left: 1rem;
   }
 }
 
@@ -56,16 +57,18 @@ $css--plex: true !default;
   fill: $gray-40;
 }
 
-:host(#{$prefix}-structured-list-row)
+:host(#{$prefix}-structured-list-row) {
   ::slotted(#{$prefix}-structured-list-cell) {
-  @extend .#{$prefix}--structured-list-td;
+    @extend .#{$prefix}--structured-list-td;
+  }
 
-  padding-left: 1rem;
-}
+  ::slotted(#{$prefix}-structured-list-cell:first-of-type) {
+    padding-left: $spacing-05;
+  }
 
-:host(#{$prefix}-structured-list-row)
   ::slotted(#{$prefix}-structured-list-cell[nowrap]) {
-  @extend .#{$prefix}--structured-list-content--nowrap;
+    @extend .#{$prefix}--structured-list-content--nowrap;
+  }
 }
 
 // "Selected" style with `.#{$prefix}--structured-list-td` does not work somehow - Need investigation
@@ -102,14 +105,25 @@ $css--plex: true !default;
   ::slotted(#{$prefix}-structured-list-cell),
 :host(#{$prefix}-structured-list-header-row[condensed])
   ::slotted(#{$prefix}-structured-list-header-cell) {
-  padding: 2rem * 0.25;
+  padding: $spacing-03;
+}
+
+:host(#{$prefix}-structured-list-row[condensed])
+  ::slotted(#{$prefix}-structured-list-cell:first-of-type),
+:host(#{$prefix}-structured-list-header-row[condensed])
+  ::slotted(#{$prefix}-structured-list-header-cell:first-of-type) {
+  padding-left: $spacing-05;
 }
 
 // flush
 :host(#{$prefix}-structured-list-row[flush])
   ::slotted(#{$prefix}-structured-list-cell),
+:host(#{$prefix}-structured-list-row[condensed][flush])
+  ::slotted(#{$prefix}-structured-list-cell),
 :host(#{$prefix}-structured-list-header-row[flush])
+  ::slotted(#{$prefix}-structured-list-header-cell),
+:host(#{$prefix}-structured-list-header-row[condensed][flush])
   ::slotted(#{$prefix}-structured-list-header-cell) {
-  padding-right: 1rem;
+  padding-right: $spacing-05;
   padding-left: 0;
 }
